--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,19 @@
 <resources>
     <string name="app_name">Notes</string>
     <string name="splash_screen_tittle">Notes</string>
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="confirm_password">Confirm password</string>
+    <string name="create_account">Create Account</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="title">Create an FastNote account</string>
+    <string name="password_confirmation">Enter your password</string>
+    <string name="enter_email">Enter your email</string>
+    <string name="addition_text">Already have an account? Login</string>
+    <string name="title_desc">Make your notes fast with FastNote,whatever place you are.</string>
+    <string name="login_failed">"Login failed"</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
