modified NoteDetailsActivity class.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="confirm_password">Confirm password</string>
     <string name="create_account">Create Account</string>
     <string name="action_sign_in_short">Login</string>
-    <string name="page_title">Save</string>
+    <string name="page_title">ADD NOTE</string>
     <string name="title">Create a FastNote account</string>
     <string name="login_title">FastNote</string>
     <string name="password_confirmation">Enter your password</string>
